--- a/css/index.css
+++ b/css/index.css
@@ -16,7 +16,7 @@ li{ list-style-type: none;   }
 .head-main,.head-main-nav,.content{  width:1170px;    }
 .head-main{ margin:5px auto; }
 .head-main div{ float:left; }
-.head-logo{ width: 82px;    height: 54px;    margin-top: 21px;    font-size:0;    background-position: 0 -896px;    background-image: url(../images/base_ui.png);    background-repeat: no-repeat;}
+.head-logo{ width: 82px;    height: 54px;    margin-top: 21px;    font-size:0;   background: url(../images/logo.png) no-repeat center center; background-size: auto 100%;}
 .city-box{ font-family: "Microsoft Yahei", "微软雅黑", Tahoma, Helvetica, Arial, sans-serif; margin: 30px 0 0 25px;  }
 .city-name{ font-size: 18px;    line-height: 20px;    height: 20px;    color: #848484;   }
 .city-link{ display: block;    width: 75px;    height: 20px;    line-height: 20px;    color: #848484;    font-size: 12px; margin-left:-6px; }
@@ -78,7 +78,7 @@ li{ list-style-type: none;   }
 .cate-list .cate-list-info > a >img{ width:100%; }
 .cate-list .cate-list-txt,.cate-list .cate-list-info-detail{ padding-top: 1em; }
 .cate-list .cate-list-txt h3{ font-size: 14px; color: #666; text-indent: -.5em;}
-.cate-list .cate-list-txt p{ color: #999; }
+.cate-list .cate-list-txt p{ color: #999; height: 4em; overflow-y: auto;}
 .cate-list .cate-list-txt a.link:hover h3,.cate-list .cate-list-txt a.link:hover p{ color:#f98235 }
 .cate-list .cate-list-txt .price{   color: #f76120; font-size: 20px; }
 .cate-list .cate-list-txt .after-price{   text-decoration: line-through; }
@@ -87,3 +87,9 @@ li{ list-style-type: none;   }
 .cate-list .cate-list-content li:hover .cate-list-qrcode{ top:0; }
 .cate-list > footer a{ line-height: 48px; height: 40px;  display: block; text-align: center; color:#666; }
 
+.filters{ margin: 1em; border: 1px solid #eee;}
+.filters > section{ margin:0 1em; padding:.5em; border-bottom:1px dotted #eee; }
+.filters > section li{ float:left; }
+.filters > section > header{ float:left; margin-right:.5em;}
+.filters > section  a{ color: #666; display:block; height:100%; padding:0 .5em;   margin: 0 .25em; border-radius: 5px; }
+.filters > section  a:hover,.filters > section  li.active a{ background:#f76120; color:#fff!important; }
