--- a/css/index.css
+++ b/css/index.css
@@ -83,7 +83,7 @@ li{ list-style-type: none;   }
 .cate-list .cate-list-txt .price{   color: #f76120; font-size: 20px; }
 .cate-list .cate-list-txt .after-price{   text-decoration: line-through; }
 .cate-list .cate-list-txt .sales{ float:right; }
-.cate-list .cate-list-qrcode{ transition:all 400ms ease-out; top:-100%; position: absolute; width:100%; height: 100%; background-repeat: no-repeat; background-size:90% auto; background-position: center center; background-color: #fff; }
+.cate-list .cate-list-qrcode{ transition:all 200ms; top:-100%; position: absolute; width:100%; height: 100%; background-repeat: no-repeat; background-size:90% auto; background-position: center center; background-color: #fff; }
 .cate-list .cate-list-content li:hover .cate-list-qrcode{ top:0; }
 .cate-list > footer a{ line-height: 48px; height: 40px;  display: block; text-align: center; color:#666; }
 
